--- a/opencl/tests/API_call.dust
+++ b/opencl/tests/API_call.dust
@@ -1,7 +1,14 @@
 ---
-:trace: API_call.yaml
-:plugins:
-  - :name: sink:testing_clprof:dispatch
+:graph_plugins:
+  :components:
+  - :plugin: souce.ruby.dust
+    :name: dust
     :params:
-      test: API_call
-
+       schemas: [opencl_babeltrace_model.yaml]
+       trace: API_call.yaml
+  - :plugin: sink.testing_clprof.dispatch
+    :name: testing_clprof
+    :params:
+       test: API_call
+  :connections:
+  - dust:testing_clprof
