--- a/opencl/tests/profiling_inversed.dust
+++ b/opencl/tests/profiling_inversed.dust
@@ -1,6 +1,14 @@
 ---
-:trace: profiling_inversed.yaml
-:plugins:
-  - :name: sink:testing_clprof:dispatch
+:graph_plugins:
+  :components:
+  - :plugin: source.ruby.dust
+    :name: dust
     :params:
-      test: profiling_inversed
+       schemas: [opencl_babeltrace_model.yaml]
+       trace: profiling_inversed.yaml
+  - :plugin: sink.testing_clprof.dispatch
+    :name: testing_clprof
+    :params:
+       test: profiling_inversed
+  :connections:
+  - dust:testing_clprof
