--- a/opencl/tests/profiling_normal_command_queue.dust
+++ b/opencl/tests/profiling_normal_command_queue.dust
@@ -1,7 +1,15 @@
 ---
-:trace: profiling_normal_command_queue.yaml
-:plugins:
-  - :name: sink:testing_clprof:dispatch
+:graph_plugins:
+  :components:
+  - :plugin: source.ruby.dust
+    :name: dust
     :params:
-      test: profiling_normal_command_queue
+       schemas: [opencl_babeltrace_model.yaml]
+       trace: profiling_normal_command_queue.yaml
+  - :plugin: sink.testing_clprof.dispatch
+    :name: testing_clprof
+    :params:
+       test: profiling_normal_command_queue
+  :connections:
+  - dust:testing_clprof
 
