--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -197,7 +197,11 @@ static void clinterval_<%= dbt_event.name %>_callback(
   <%elsif dbt_event.name.end_with?(STOP) and dbt_event.name.include?('clCreateCommandQueue') %>
     const thapi_device_id device = state->start_device[hpt_t(hostname,process_id, thread_id) ];
     const thapi_device_id root_device = state->device_to_rootdevice[hp_device_t(hostname,process_id, device) ];
-    state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)] =   dsd_t(root_device, device) ; 
+    if (root_device != 0) {
+        state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)] =   dsd_t(root_device, device) ;
+    } else { 
+        state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)] =   dsd_t(device, 0) ;
+    }
   <% elsif dbt_event.name_unsanitized == "lttng_ust_opencl_devices:device_name" %>
     clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;       
     const hostname_t hostname{ borrow_hostname(bt_evt)};
