--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -38,10 +38,10 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
 
 static void create_and_enqueue_device_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, 
                                               const thapi_device_id device_id, const thapi_device_id subdevice_id,
-                                              const char* name, const uint64_t ts, const uint64_t duration) {
+                                              const char* name, const uint64_t ts, const uint64_t duration, const bool err) {
     
      /* Message creation */
-     bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration,
+     bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration, err,
                             clinterval_iter_g->dispatch->device_event_class,
                             self_message_iterator_g,
                             clinterval_iter_g->dispatch->stream);
@@ -252,8 +252,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
     } else {
         const auto [start,delta] = state->event_result_to_start_and_delta[hp_event];
         const auto [device,subdevice] = state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id, function_name)];
-        if (delta != 0)
-            create_and_enqueue_device_message(hostname.c_str(),process_id,thread_id,device,subdevice,function_name.c_str(),start,delta);
+        create_and_enqueue_device_message(hostname.c_str(),process_id,thread_id,device,subdevice,function_name.c_str(),start,delta, delta == 0);
 
         state->event_to_function_name_and_ts.erase(hp_event);
     }
@@ -266,9 +265,6 @@ static void clinterval_<%= dbt_event.name %>_callback(
     //Should we check that end > start?
     uint64_t delta = end - start;
     if (queued_status != 0 or submit_status != 0 or start_status != 0) {
-        std::cerr << "Warning: 'lttng_ust_opencl_profiling:event_profiling_results' for event " 
-                  << std::hex << std::showbase << std::internal << std::setfill('0') << event  
-                  << " returned invalid status" << std::endl;
         delta = 0;
     }
 
@@ -281,8 +277,7 @@ static void clinterval_<%= dbt_event.name %>_callback(
         const uint64_t start_event = ts + (start - queued);
 
         // Check for error 
-        if (delta != 0)
-             create_and_enqueue_device_message(hostname.c_str(),process_id,thread_id,device, subdevice, function_name.c_str(),start_event,delta);
+        create_and_enqueue_device_message(hostname.c_str(),process_id,thread_id,device, subdevice, function_name.c_str(),start_event,delta, delta == 0);
 
         state->event_to_function_name_and_ts.erase(hp_event);
     } else {
