--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -1,6 +1,6 @@
 #include <iomanip>
 #include <iostream>
-#include "clinterval.h"
+#include "babeltrace_clinterval.h"
 #include "clinterval_callbacks.hpp"
 #include "xprof_utils.hpp"
 #include <babeltrace2/babeltrace.h>
