--- a/xprof/interval.c.erb
+++ b/xprof/interval.c.erb
@@ -1,4 +1,4 @@
-#include "<%= namespace %>.h"
+#include "babeltrace_<%= namespace %>.h"
 
 #include <stdbool.h>
 #include <babeltrace2/babeltrace.h>
