--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -28,9 +28,9 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
 
      /* Message creation */
      bt_message *message = create_host_message(hostname, process_id, thread_id, name, ts, duration, err, 
-                            clinterval_iter_g->dispatch->host_event_class,
-                            self_message_iterator_g,
-                            clinterval_iter_g->dispatch->stream);
+                                               clinterval_iter_g->dispatch->host_event_class,
+                                               self_message_iterator_g,
+                                               clinterval_iter_g->dispatch->stream);
 
      clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
@@ -42,15 +42,30 @@ static void create_and_enqueue_device_message(const char* hostname, const proces
     
      /* Message creation */
      bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration, err,
-                            clinterval_iter_g->dispatch->device_event_class,
-                            self_message_iterator_g,
-                            clinterval_iter_g->dispatch->stream);
- 
+                                                 clinterval_iter_g->dispatch->device_event_class,
+                                                 self_message_iterator_g,
+                                                 clinterval_iter_g->dispatch->stream);
  
      /* Set message */
      clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
 }
+
+static void create_and_enqueue_device_name_message(const char* hostname, const process_id_t process_id,
+                                                   const thapi_device_id device_id, 
+                                                   const char* name) {
+
+     /* Message creation */
+     bt_message *message = create_device_name_message(hostname, process_id, device_id, name,
+                                                      clinterval_iter_g->dispatch->device_name_event_class,
+                                                      self_message_iterator_g,
+                                                      clinterval_iter_g->dispatch->stream);
+
+     /* Set message */
+     clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
+     state->downstream_message_queue.push(message);
+}
+
 
 static void create_and_enqueue_traffic_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
                                                const uint64_t size) {
@@ -64,6 +79,8 @@ static void create_and_enqueue_traffic_message(const char* hostname, const proce
      clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
 }
+
+
 
 <%#
   _                                         _                          _ ___ 
@@ -203,10 +220,9 @@ static void clinterval_<%= dbt_event.name %>_callback(
         state->command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)] =   dsd_t(device, 0) ;
     }
   <% elsif dbt_event.name_unsanitized == "lttng_ust_opencl_devices:device_name" %>
-    clinterval_callbacks_state* state = (clinterval_callbacks_state*) clinterval_iter_g->callbacks_state;       
     const hostname_t hostname{ borrow_hostname(bt_evt)};
-    const process_id_t process_id = borrow_process_id(bt_evt);
-    state->device_to_name[hp_device_t(hostname,process_id,(thapi_device_id) device)] = hostname_t{name};
+    const process_id_t process_id {borrow_process_id(bt_evt) };
+    create_and_enqueue_device_name_message(hostname.c_str(),process_id,(thapi_device_id) device, name);
   <% end %>
 
   <%#
