--- a/cuda/cudainterval_callbacks.cpp.erb
+++ b/cuda/cudainterval_callbacks.cpp.erb
@@ -33,7 +33,7 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) cudainterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
 }
-/*
+
 void create_and_enqueue_device_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, 
                                        const thapi_device_id device_id, const thapi_device_id subdevice_id,
                                        const char* name, const uint64_t ts, const uint64_t duration, const bool err) {
@@ -49,7 +49,7 @@ void create_and_enqueue_device_message(const char* hostname, const process_id_t 
      cudainterval_callbacks_state* state = (cudainterval_callbacks_state*) cudainterval_iter_g->callbacks_state;
      state->downstream_message_queue.push(message);
 }
-*/
+
 static void create_and_enqueue_traffic_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, const char* name,
                                                const uint64_t size) {
 
@@ -142,6 +142,58 @@ static void cudainterval_<%= dbt_event.name %>_callback(
   <%if dbt_event.name_striped.include?("Memcpy") and dbt_event.fields_name.include?("ByteCount") %>
     create_and_enqueue_traffic_message(_hostname.c_str(), _process_id, _thread_id, "<%= dbt_event.name_striped %>", ByteCount);
   <% end %>
+
+  <%#
+    _         _                    _                        ___
+   |_) ._ _ _|_ o | o ._   _  o   |_ |  _. ._   _  _   _|    | o ._ _   _   _
+   |   | (_) |  | | | | | (_| o   |_ | (_| |_) _> (/_ (_|    | | | | | (/_ _>
+                           _|              |
+   Map [ Tuple[hostname, process, device, subdevice, cl_function_name], elapsed_time ]
+  %>
+  <% if dbt_event.name_unsanitized == "lttng_ust_cuda_profiling:event_profiling" %>
+    const hostname_t   _hostname   = borrow_hostname(bt_evt);
+    const process_id_t _process_id = borrow_process_id(bt_evt);
+    const thread_id_t  _thread_id  = borrow_thread_id(bt_evt);
+    cudainterval_callbacks_state* _state = (cudainterval_callbacks_state*) cudainterval_iter_g->callbacks_state;
+     
+    const hp_event_t _hp_event{_hostname, _process_id, hStart, hStop};
+    const auto [_function_name, _ts] = _state->profiled_function_name_and_ts[hpt_t(_hostname, _process_id, _thread_id)];
+    if (!_state->event_to_function_name_and_ts.count(_hp_event)){
+        _state->event_to_function_name_and_ts[_hp_event] = tfn_ts_t(_thread_id, _function_name, _ts);
+    } else {
+       const auto [_start, _delta] = _state->event_result_to_start_and_delta[_hp_event];
+       const auto _device = _state->function_name_to_d[hpt_function_name_t(_hostname,_process_id,_thread_id, _function_name)];
+      create_and_enqueue_device_message(_hostname.c_str(),_process_id,_thread_id,_device,_device,_function_name.c_str(), _start, _delta, _delta == 0 );
+   }
+
+  <% elsif dbt_event.name_unsanitized == "lttng_ust_cuda_profiling:event_profiling_results" %>
+    const hostname_t _hostname    = borrow_hostname(bt_evt);
+    const process_id_t _process_id = borrow_process_id(bt_evt);
+    cudainterval_callbacks_state* _state = (cudainterval_callbacks_state*) cudainterval_iter_g->callbacks_state;
+
+    const hp_event_t _hp_event{_hostname, _process_id, hStart, hStop};
+    if (_state->event_to_function_name_and_ts.count(_hp_event)) {
+      const auto [_thread_id, _function_name, _ts] = _state->event_to_function_name_and_ts[_hp_event];
+      const auto _device = _state->function_name_to_d[hpt_function_name_t(_hostname, _process_id, _thread_id, _function_name)];
+
+      const uint64_t _start = _ts;
+      const uint64_t _delta = uint64_t (milliseconds * 1E3);
+      create_and_enqueue_device_message(_hostname.c_str(),_process_id, _thread_id, _device, _device, _function_name.c_str(), _start, _delta, _delta == 0 );
+
+      _state->event_to_function_name_and_ts.erase(_hp_event);
+    } else {
+      const thread_id_t _thread_id = borrow_thread_id(bt_evt);
+      const auto [_function_name, _ts] = _state->profiled_function_name_and_ts[hpt_t(_hostname, _process_id, _thread_id)];
+      const auto _device = _state->function_name_to_d[hpt_function_name_t(_hostname, _process_id, _thread_id, _function_name)];
+
+      const hp_device_t hp_device{_hostname, _process_id, _device};
+      const uint64_t _start = _ts;
+      const uint64_t _delta = uint64_t (milliseconds * 1E3);
+      _state->event_result_to_start_and_delta[_hp_event] = sd_t(_start, _delta);
+      _state->event_to_function_name_and_ts[_hp_event] = tfn_ts_t(_thread_id, _function_name, _ts);
+    }
+  <% end %>
+
 };
 <% end %>
 
