Added support for cuda VDPAU functions.

--- a/cuda/cudainterval_callbacks.cpp.erb
+++ b/cuda/cudainterval_callbacks.cpp.erb
@@ -5,8 +5,7 @@
 #include "xprof_utils.hpp"
 #include <babeltrace2/babeltrace.h>
 
-#define __CUDA_API_VERSION_INTERNAL 1
-#include <cuda.h>
+#include <cuda.h.include>
 
 #include <vector>
 #include <algorithm>
